--- a/src/app/+dashboard/dashboard.component.html
+++ b/src/app/+dashboard/dashboard.component.html
@@ -3,19 +3,14 @@
     <app-total-books></app-total-books>
   </div>
   <div class="column">
-    <div class="card">
-      <div class="card-section">
-        <h4>Neue Bücher</h4>
-        <p>In den letzten 24h</p>
-      </div>
-    </div>
+    <app-new-books></app-new-books>
   </div>
-  <div class="column">
-    <div class="card">
-      <div class="card-section">
-        <h4>Letztes History update</h4>
-        <p>Abgleich von Preis und Rang</p>
-      </div>
-    </div>
-  </div>
+  <!--<div class="column">-->
+    <!--<div class="card">-->
+      <!--<div class="card-section">-->
+        <!--<h4>Letztes History update</h4>-->
+        <!--<p>Abgleich von Preis und Rang</p>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
