--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,11 +18,10 @@
             <a routerLink="/" routerLinkActive="active"><i class="material-icons">dashboard</i> Dashboard</a>
           </li>
           <li>
-            <a href=""><i class="material-icons">add_box</i> Buch hinzufügen</a>
+            <a routerLink="book/create" routerLinkActive="active"><i class="material-icons">add_box</i> Buch hinzufügen</a>
           </li>
           <li>
-            <a href=""><i class="material-icons">create</i> Buch editieren
-            </a>
+            <!--<a href="" class="disabled"><i class="material-icons">create</i> Buch editieren</a>-->
           </li>
         </ul>
       </div>
